--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -2,7 +2,9 @@
 author: Amal Nair
 git: @cold-magma
 */
-
+html{
+	scroll-behavior: smooth;
+}
 body{
 	animation: fade 1s ease-in-out forwards;
 	margin:0;
@@ -66,6 +68,9 @@ nav{
 	margin-bottom: none;
 	display: flex;
 	flex-direction: column;
+}
+a{
+	text-decoration: none;
 }
 .opttxt{
 	font-family: 'Anton', sans-serif;
