--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -380,12 +380,12 @@ a{
 		transform: rotate(0);
 	}
 	nav{
-		transform: translate(100vw,0);
+		transform: translate(100vw,5vh);
 		width: 100%;
 		height: 95vh;
 	}
 	.navactive{
-		transform: translate(0,0);
+		transform: translate(0,5vh);
 	}
 }
 
