--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -382,6 +382,15 @@ a{
 	.navactive{
 		transform: translate(0,5vh);
 	}
+	.div3{
+		display: flex;
+		width: 100%;
+		height: 15vh;
+		align-items: baseline;
+	}
+	.div1{
+		height: 75vh;
+	}
 }
 
 @keyframes onclick{
