--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -316,7 +316,7 @@ a{
 	background: #0575e6;
 }
 .menubg3{
-	background-color: black;
+	background-color: #723feb;
 }
 .menubg4{
 	background-color: #f3b48b;
