--- a/neon/css/neonstylesheet.css
+++ b/neon/css/neonstylesheet.css
@@ -253,6 +253,8 @@ strong{
 		width: 100%;
 		height: auto;
 		display: flex;
+		align-items: center;
+		justify-content: space-around;
 		flex-direction: column;
 	}
 	.navname{
