--- a/neon/css/neonstylesheet.css
+++ b/neon/css/neonstylesheet.css
@@ -17,6 +17,7 @@ body{
 	justify-content: space-around;
 	background-color: #052235;
 	font-family: montserrat, sans-serif;
+	overflow-x: hidden;
 }
 
 
@@ -260,11 +261,13 @@ strong{
 		flex-direction: column;
 	}
 	.navname{
+		float: none;
 		width: 100%;
 	}
 	nav{
 		height: auto;
 		width: 100%;
+		float: none;
 	}
 
 	nav ul {
