--- a/neon/css/neonstylesheet.css
+++ b/neon/css/neonstylesheet.css
@@ -276,6 +276,8 @@ strong{
 		list-style: none;
 		display: flex;
 		flex-direction: row;
+		align-items: center;
+		justify-content: space-around;
 	}
 
 	nav li {
