--- a/neon/css/neonstylesheet.css
+++ b/neon/css/neonstylesheet.css
@@ -284,11 +284,15 @@ strong{
 		height: auto;
 		display: block;
 		width: 100%;
+		margin-right: 20px;
 	}
 	.navlink{
 		font-size: 1rem;
 		padding: 0;
+		padding-top:15px;
+		padding-bottom: 15px;
 		width: 100%;
+		text-align: center;
 		letter-spacing: 2px;
 	}
 	#navheader{
