--- a/neon/css/neonstylesheet.css
+++ b/neon/css/neonstylesheet.css
@@ -65,7 +65,7 @@ body::-webkit-scrollbar-thumb:horizontal:hover{
 .navbar
 {
 	width: 100%;
-	height: auto;
+	height: 10vh;
 }
 .navname{
 	float: left;
