--- a/empyrean/empyreanstylesheet.css
+++ b/empyrean/empyreanstylesheet.css
@@ -172,11 +172,12 @@ a{
 }
 @media (max-aspect-ratio: 9/15) {
     #d1{
-    	background-position: 50% 20%;
+    	background-position: 50% 0;
     }
     #d2 {
         background: url("./images/l2small.png");
 		background-size: cover;	
 		background-repeat: no-repeat;
+		background-position: 0 50%;
     }
 }
