--- a/pilot/css/pilotstylesheet.css
+++ b/pilot/css/pilotstylesheet.css
@@ -11,6 +11,7 @@ body{
 	padding: 0;
 	background-color: #474747;
 	color: coral;
+	overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -28,7 +29,6 @@ body::-webkit-scrollbar-thumb{
 }
 
 header{
-	animation: comein 4s ease forwards;
 	width: 100%;
 	height: 21rem;
 	justify-content: space-around;
@@ -36,6 +36,7 @@ header{
 	text-align: center;
 }
 .mainlogo{
+	animation: comein 4s ease forwards;
 	font-weight: bolder;
 }
 p{
@@ -216,9 +217,11 @@ h3{
 @keyframes comein{
 	from{
 		letter-spacing: 200px;
+		transform: translate(100px,0);
 	}
 	to {
 		letter-spacing: 20px;
+		transform: translate(0,0);
 	}
 }
 @keyframes fade{
