--- a/pilot/css/pilotstylesheet.css
+++ b/pilot/css/pilotstylesheet.css
@@ -31,13 +31,16 @@ body::-webkit-scrollbar-thumb{
 header{
 	width: 100%;
 	height: 21rem;
+	display: flex;
+	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	text-align: center;
 }
 .mainlogo{
 	animation: comein 4s ease forwards;
 	font-weight: bolder;
+	text-align: center;
+	width: 100%;
 }
 p{
 	animation: fade 1s ease forwards;
@@ -216,8 +219,8 @@ h3{
 }
 @keyframes comein{
 	from{
-		letter-spacing: 200px;
-		transform: translate(100px,0);
+		letter-spacing: 100px;
+		transform: translate(50px,0);
 	}
 	to {
 		letter-spacing: 20px;
