--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -356,7 +356,7 @@ a{
 }
 .menut4:hover{
 	transform: translate(-6px,-6px);
-	text-shadow: 1px 1px 1px #a66b44, 2px 2px 1px #a66b44, 3px 3px 1px #a66b44, 4px 4px 1px #a66b44, 5px 5px 1px #a66b44;
+	text-shadow: 1px 1px 1px #8c5734, 2px 2px 1px #8c5734, 3px 3px 1px #8c5734, 4px 4px 1px #8c5734, 5px 5px 1px #8c5734;
 } 
 
 
