--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -349,7 +349,7 @@ a{
 }
 .menut3:hover{
 	transform: translate(-6px,-6px);
-	text-shadow: 1px 1px 1px #3d1e87, 2px 2px 1px #3d1e87, 3px 3px 1px #3d1e87, 4px 4px 1px #3d1e87, 5px 5px 1px #3d1e87;
+	text-shadow: 1px 1px 1px #371c78, 2px 2px 1px #371c78, 3px 3px 1px #371c78, 4px 4px 1px #371c78, 5px 5px 1px #371c78;
 } 
 .menut4{
 	color: #f3b48b;
